2007-12-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\pdffontattr): only do the cmaps if this pdftex
	primitive is defined, for the sake of those running ancient versions.

2007-12-13  Karl Berry  <karl@gnu.org>

	* info/session.c: remove status report messages, said to be noise.
	Report from Benno Schulenberg, 11 Dec 2007 00:19:57.

2007-12-09  Benno Schulenberg  <bensberg@justemail.net>  (tiny change)

	* makeinfo/makeinfo.c (usage): improve help message.
	bug-texinfo mail of 02 Dec 2007 23:43:10 +0100.

2007-12-09  Fabian Groffen  <grobian@gentoo.org>  (tiny change)

	* info/makedoc.c (main): reorder calls following the Makefile
	dependencies, for high-precision filesystems.  
	http://bugs.gentoo.org/show_bug.cgi?id=200662
	bug-texinfo mail of 3 Dec 2007 17:59:13 +0100.
	
2007-12-02  Karl Berry  <karl@gnu.org>

	* info/info.c (main): undo change of 2006-08-13 in this file,
	so info can be easily tested in multibyte locales.

	* all files: use the multibyte case comparison functions
	mbscasecmp and mbsncasecmp from gnulib, instead of simply
	strcasecmp and strncasecmp.  (1) gnulib strcase is buggy,
	declaring the str* functions in string.h instead of strings.h,
	leading to build failure on AIX 4.3.3 (report from Gary E. Barnes,
	21 Nov 2007 12:37:12).  (2) we want to support multibyte locales
	better anyway.

2007-11-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/Makeinfo.am: Rename txi-no.tex to txi-nb.tex (see
	2007-10-31).
	
2007-11-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (headings on off): clarify the meaning of
	@headings on.  Report from Dilyan Palauzov, 25 Nov 2007 17:07:09.

2007-11-25  Stephane Chazelas  <stephane_chazelas@yahoo.fr>

	*  info/indices.c (info_next_index_match): use the line number
	specified in the index entry, if available.

2007-11-23  Benno Schulenberg <bensberg@justemail.net>

	* info/infodoc.c: keep help strings together for translation.

2007-11-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
